@@ -604,6 +604,16 @@
 
 	Various: Stop using GtkBox padding, fill and expand child properties
 
+	* libinit_balsa/assistant_page_defclient.c
+	(balsa_druid_page_defclient_init):
+	* libinit_balsa/assistant_page_directory.c
+	(balsa_druid_page_directory_init):
+	* libinit_balsa/assistant_page_user.c (balsa_druid_page_user_init):
+
+2020-06-07  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
+	Various: Stop using GtkBox padding, fill and expand child properties
+
 	* libbalsa/address.c (libbalsa_address_get_edit_widget):
 	* libbalsa/identity.c (libbalsa_identity_select_dialog),
 	(libbalsa_identity_config_dialog):
